# ghost

./: .gitignore  Cargo.toml  README.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
old/: Cargo.toml  README.md
old/src/: main.rs
output/: recording.mkv  recording_1721918602.csv
src/: App.tsx  main.rs  styles.css
src-tauri/: .gitignore  Cargo.toml  draw.py  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json  theme.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  main.rs
src-tauri/src/recording/: mod.rs  recording.rs
src-tauri/src/types/: devents.rs  mod.rs
