[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
screenshots = "0.5.2"
mouse-rs = "0.4.1"
image = "0.24.5"
chrono = "0.4.23"
csv = "1.2.1"
clap = "3.2.23"
# xcap = "0.0.10"
# xcap = { git = "https://github.com/djmango/xcap.git", branch = "master" }
xcap = { path = "../../../xcap/" }
video-rs = "0.8.1"
ndarray = "0.15.6"
