[package]
name = "iinc-ghost"
version = "0.0.0"
description = "A Tauri App"
authors = ["djmango", "iinc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.23"
csv = "1.2.1"
ffmpeg-sidecar = "1.1.0"
log = "0.4.22"
rand = "0.8.5"
rdev = { git = "https://github.com/djmango/rdev", features = ["serde", "serialize"] }
# rdev = { path = "../../rdev/", features = ["serde", "serialize"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-beta", features = ["config-json5"] }
# tauri-plugin-deep-link = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta.12"
tauri-plugin-log = "2.0.0-beta.9"
# tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta.10"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.0.0-beta"
